{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 320,
  "lineage": "08384cce-c44d-f4ef-a927-b0058126f262",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group/sg-03271b0f47eb90193",
            "description": "Security group to manage connections on RDS DB, only to allow the connections from RDS proxy.",
            "egress": [],
            "id": "sg-03271b0f47eb90193",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03c567354ab3eb0d0"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "tf-aws-lambda-project-db-proxy",
            "name_prefix": "",
            "owner_id": "247625421810",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Admin": "Thomas Tuminaro",
              "ManagedBy": "Terraform",
              "Name": "tf-aws-lambda-project-db-proxy",
              "Project": "tf-aws-lambda-project"
            },
            "tags_all": {
              "Admin": "Thomas Tuminaro",
              "ManagedBy": "Terraform",
              "Name": "tf-aws-lambda-project-db-proxy",
              "Project": "tf-aws-lambda-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-04912de581d8b992c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sg-03271b0f47eb90193",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group/sg-05abaa9a042966e46",
            "description": "Security group to manage connections between Lambda function and RDS proxy and to VPC endpoint.",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03c567354ab3eb0d0"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076020becddce1bc8"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-05abaa9a042966e46",
            "ingress": [],
            "name": "tf-aws-lambda-project-lambda-proxy",
            "name_prefix": "",
            "owner_id": "247625421810",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Admin": "Thomas Tuminaro",
              "ManagedBy": "Terraform",
              "Name": "tf-aws-lambda-project-lambda-proxy",
              "Project": "tf-aws-lambda-project"
            },
            "tags_all": {
              "Admin": "Thomas Tuminaro",
              "ManagedBy": "Terraform",
              "Name": "tf-aws-lambda-project-lambda-proxy",
              "Project": "tf-aws-lambda-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-04912de581d8b992c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sg-05abaa9a042966e46",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "proxy_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group/sg-03c567354ab3eb0d0",
            "description": "Security group to manage connections of RDS proxy, to Lambda and RDS db.",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03271b0f47eb90193"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-03c567354ab3eb0d0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05abaa9a042966e46"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "tf-aws-lambda-project-proxy-lambda",
            "name_prefix": "",
            "owner_id": "247625421810",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Admin": "Thomas Tuminaro",
              "ManagedBy": "Terraform",
              "Name": "tf-aws-lambda-project-proxy-lambda",
              "Project": "tf-aws-lambda-project"
            },
            "tags_all": {
              "Admin": "Thomas Tuminaro",
              "ManagedBy": "Terraform",
              "Name": "tf-aws-lambda-project-proxy-lambda",
              "Project": "tf-aws-lambda-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-04912de581d8b992c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sg-03c567354ab3eb0d0",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpcendpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group/sg-076020becddce1bc8",
            "description": "Security group for VPC endpoint, only allow connections from Lambda.",
            "egress": [],
            "id": "sg-076020becddce1bc8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05abaa9a042966e46"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "tf-aws-lambda-project-endpoint",
            "name_prefix": "",
            "owner_id": "247625421810",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Admin": "Thomas Tuminaro",
              "ManagedBy": "Terraform",
              "Name": "tf-aws-lambda-project-endpoint",
              "Project": "tf-aws-lambda-project"
            },
            "tags_all": {
              "Admin": "Thomas Tuminaro",
              "ManagedBy": "Terraform",
              "Name": "tf-aws-lambda-project-endpoint",
              "Project": "tf-aws-lambda-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-04912de581d8b992c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sg-076020becddce1bc8",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "db-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:subnet/subnet-0761ce84923da273e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0761ce84923da273e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247625421810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Admin": "Thomas Tuminaro",
              "ManagedBy": "Terraform",
              "Name": "tf-aws-lambda-project-db-1",
              "Project": "tf-aws-lambda-project"
            },
            "tags_all": {
              "Admin": "Thomas Tuminaro",
              "ManagedBy": "Terraform",
              "Name": "tf-aws-lambda-project-db-1",
              "Project": "tf-aws-lambda-project"
            },
            "vpc_id": "vpc-04912de581d8b992c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "subnet-0761ce84923da273e",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "db-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:subnet/subnet-0494d7a26c589f3ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0494d7a26c589f3ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247625421810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Admin": "Thomas Tuminaro",
              "ManagedBy": "Terraform",
              "Name": "tf-aws-lambda-project-db-2",
              "Project": "tf-aws-lambda-project"
            },
            "tags_all": {
              "Admin": "Thomas Tuminaro",
              "ManagedBy": "Terraform",
              "Name": "tf-aws-lambda-project-db-2",
              "Project": "tf-aws-lambda-project"
            },
            "vpc_id": "vpc-04912de581d8b992c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "subnet-0494d7a26c589f3ac",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "lambda-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:subnet/subnet-0735474e54f0c0704",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0735474e54f0c0704",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247625421810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Admin": "Thomas Tuminaro",
              "ManagedBy": "Terraform",
              "Name": "tf-aws-lambda-project-lambda-1",
              "Project": "tf-aws-lambda-project"
            },
            "tags_all": {
              "Admin": "Thomas Tuminaro",
              "ManagedBy": "Terraform",
              "Name": "tf-aws-lambda-project-lambda-1",
              "Project": "tf-aws-lambda-project"
            },
            "vpc_id": "vpc-04912de581d8b992c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "subnet-0735474e54f0c0704",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "lambda-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:subnet/subnet-005697083e41dc1b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005697083e41dc1b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247625421810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Admin": "Thomas Tuminaro",
              "ManagedBy": "Terraform",
              "Name": "tf-aws-lambda-project-lambda-2",
              "Project": "tf-aws-lambda-project"
            },
            "tags_all": {
              "Admin": "Thomas Tuminaro",
              "ManagedBy": "Terraform",
              "Name": "tf-aws-lambda-project-lambda-2",
              "Project": "tf-aws-lambda-project"
            },
            "vpc_id": "vpc-04912de581d8b992c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "subnet-005697083e41dc1b1",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:vpc/vpc-04912de581d8b992c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08de2b95e85009220",
            "default_route_table_id": "rtb-0ec74afd410bb6ec5",
            "default_security_group_id": "sg-0518bb2099e888ac2",
            "dhcp_options_id": "dopt-0629cebb18b90371d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04912de581d8b992c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec74afd410bb6ec5",
            "owner_id": "247625421810",
            "region": "eu-west-3",
            "tags": {
              "Admin": "Thomas Tuminaro",
              "ManagedBy": "Terraform",
              "Name": "tf-aws-lambda-project-vpc",
              "Project": "tf-aws-lambda-project"
            },
            "tags_all": {
              "Admin": "Thomas Tuminaro",
              "ManagedBy": "Terraform",
              "Name": "tf-aws-lambda-project-vpc",
              "Project": "tf-aws-lambda-project"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "vpc-04912de581d8b992c",
            "region": "eu-west-3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:vpc-endpoint/vpce-0ffb3e3fd55706bfd",
            "dns_entry": [
              {
                "dns_name": "vpce-0ffb3e3fd55706bfd-9hmyhe08.secretsmanager.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0ffb3e3fd55706bfd-9hmyhe08-eu-west-3a.secretsmanager.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0ffb3e3fd55706bfd-9hmyhe08-eu-west-3b.secretsmanager.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "secretsmanager.eu-west-3.amazonaws.com",
                "hosted_zone_id": "Z030602838ANMQW4QMSMP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ffb3e3fd55706bfd",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03e1f414a23733971",
              "eni-097e5d8beac7cc776"
            ],
            "owner_id": "247625421810",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-3",
            "requester_managed": false,
            "security_group_ids": [
              "sg-076020becddce1bc8"
            ],
            "service_name": "com.amazonaws.eu-west-3.secretsmanager",
            "service_region": "eu-west-3",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.20.250",
                "subnet_id": "subnet-0735474e54f0c0704"
              },
              {
                "ipv4": "10.0.21.144",
                "subnet_id": "subnet-005697083e41dc1b1"
              }
            ],
            "subnet_ids": [
              "subnet-005697083e41dc1b1",
              "subnet-0735474e54f0c0704"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04912de581d8b992c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "vpce-0ffb3e3fd55706bfd",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.vpcendpoint",
            "aws_subnet.lambda",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_sql_from_lambda_to_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-001c9fa9786bf80dc",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-001c9fa9786bf80dc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03c567354ab3eb0d0",
            "region": "eu-west-3",
            "security_group_id": "sg-05abaa9a042966e46",
            "security_group_rule_id": "sgr-001c9fa9786bf80dc",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-001c9fa9786bf80dc",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.lambda_proxy",
            "aws_security_group.proxy_lambda",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_sql_from_proxy_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-038b089c39a1f1ed3",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-038b089c39a1f1ed3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03271b0f47eb90193",
            "region": "eu-west-3",
            "security_group_id": "sg-03c567354ab3eb0d0",
            "security_group_rule_id": "sgr-038b089c39a1f1ed3",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-038b089c39a1f1ed3",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.db_proxy",
            "aws_security_group.proxy_lambda",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_traffic_to_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-018838ac7793b0836",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-018838ac7793b0836",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-076020becddce1bc8",
            "region": "eu-west-3",
            "security_group_id": "sg-05abaa9a042966e46",
            "security_group_rule_id": "sgr-018838ac7793b0836",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-018838ac7793b0836",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.lambda_proxy",
            "aws_security_group.vpcendpoint",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_sql_from_lambda_to_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-0ce0af333bc24416d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0ce0af333bc24416d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-05abaa9a042966e46",
            "region": "eu-west-3",
            "security_group_id": "sg-03c567354ab3eb0d0",
            "security_group_rule_id": "sgr-0ce0af333bc24416d",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-0ce0af333bc24416d",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.lambda_proxy",
            "aws_security_group.proxy_lambda",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_sql_from_proxy_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-063c5c4ecb72b7e71",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-063c5c4ecb72b7e71",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03c567354ab3eb0d0",
            "region": "eu-west-3",
            "security_group_id": "sg-03271b0f47eb90193",
            "security_group_rule_id": "sgr-063c5c4ecb72b7e71",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-063c5c4ecb72b7e71",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.db_proxy",
            "aws_security_group.proxy_lambda",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_traffic_from_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:247625421810:security-group-rule/sgr-079194e545b08b4d4",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-079194e545b08b4d4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-05abaa9a042966e46",
            "region": "eu-west-3",
            "security_group_id": "sg-076020becddce1bc8",
            "security_group_rule_id": "sgr-079194e545b08b4d4",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "247625421810",
            "id": "sgr-079194e545b08b4d4",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.lambda_proxy",
            "aws_security_group.vpcendpoint",
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}